remove system mode

--- a/home.css
+++ b/home.css
@@ -170,10 +170,10 @@ li a{
     
 }
 
-
+/* 
 @media (prefers-color-scheme: dark) {
     *{
         background-color: black;
         color: aliceblue;
     }
-}
+} */
