--- a/mainpg.css
+++ b/mainpg.css
@@ -13,16 +13,18 @@ body {
 .main2 {
   display: flex;
   flex-direction: row;
-  padding-bottom: 70px;
 
 }
 
 #submit-btn {
   display: none;
-  position: fixed;
-  top: 15px;
-  left: 100px;
+  position: relative;
   z-index: 10;
+}
+.btn-container{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 #price {
