--- a/mainpg.css
+++ b/mainpg.css
@@ -13,7 +13,6 @@ body {
 .main2 {
   display: flex;
   flex-direction: row;
-
 }
 
 #submit-btn {
@@ -21,15 +20,26 @@ body {
   position: relative;
   z-index: 10;
 }
-.btn-container{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+.btn-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 #price {
-  height: 100vh;
+  height: 90%;
+  padding: auto;
   display: none;
+}
+#price span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+#price span h3{
+    font-size: 5em;
+    color: green;
 }
 
 .preference {
