align item in main to center

--- a/mainpg.css
+++ b/mainpg.css
@@ -136,5 +136,7 @@ input[type="checkbox"] {
     flex-direction: column;
     gap: 10px;
     box-shadow: none;
+    align-items: center;
   }
+ 
 }
