--- a/home.css
+++ b/home.css
@@ -124,7 +124,10 @@ li a{
     }
     #sidebar{
         display: block;
-        position:static;
+        position:fixed;
+        right: 55;
+        top: 5px;
+        border: none;
         box-shadow: none;
         
         z-index: 13px;
