--- a/home.css
+++ b/home.css
@@ -9,6 +9,8 @@ a{
     padding: 10px;
 
 }
+
+
 #sidebar{
     display: none;
 }
@@ -88,6 +90,7 @@ button{
     flex-direction: column;
     justify-content: center;
 }
+
 .col2Img{
     background-image: url("/homepage/middle/ourexpertise.jpeg");
 }
@@ -98,15 +101,27 @@ button{
 .container{
     display: flex;
     flex-direction:column;
-    gap: 40px;
     margin: 20px;
 }
 
 footer{
-    height: 300px;
     background-color: black;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 15px;
+    box-shadow: 0px 0px 10px gray;
 }
+footer>div>ul{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+footer h4,footer p,li,.a-color{
+    list-style-type: none;
+    color: white;
+}
+
 .indLogo{
     background-image: url("indiaFlag.svg");
     width: 20px;
@@ -170,11 +185,12 @@ li a{
         display: block;
         width: 100%;
       }
+      
     
 }
 
-/* 
-@media (prefers-color-scheme: dark) {
+
+/* @media (prefers-color-scheme: dark) {
     *{
         background-color: black;
         color: aliceblue;
